fixed image size to avoid layout shift, lazy load bc player homepage, reduce 3rd party impact loading

--- a/docs/theme/css/style.css
+++ b/docs/theme/css/style.css
@@ -31,8 +31,18 @@ body {
 }
 
 .hero-image {
-margin-bottom: 2em;
+  margin-bottom: 2em;
+  aspect-ratio: 5 / 1;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
 
+.hero-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 h1 {
